stepped-solutions/07/captioned_images/deploy/deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      run: webapp
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
        - name: webapp
          image: gcr.io/crafty-shelter-224719/captioned_images:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
