stepped-solutions/07/captioned_images/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress-ipv4
  annotations:
    kubernetes.io/ingress.global-static-ip-name: webapp-ipv4
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  rules:
  - host: crafty-shelter-224719.duckdns.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: webapp-service
          servicePort: 80
  - host: crafty-shelter-224719-assets.duckdns.org
    http:
      paths:
      - path: /assets/*
        backend:
          serviceName: webapp-service
          servicePort: 81
      - path: /
        backend:
          serviceName: webapp-service
          servicePort: 80
  tls:
  - secretName: webapp-tls
    hosts:
    - crafty-shelter-224719.duckdns.org
  - secretName: assets-tls
    hosts:
    - crafty-shelter-224719-assets.duckdns.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress-ipv6
  annotations:
    kubernetes.io/ingress.global-static-ip-name: webapp-ipv6
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  rules:
  - host: crafty-shelter-224719.duckdns.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: webapp-service
          servicePort: 80
  - host: crafty-shelter-224719-assets.duckdns.org
    http:
      paths:
      - path: /assets/*
        backend:
          serviceName: webapp-service
          servicePort: 81
      - path: /
        backend:
          serviceName: webapp-service
          servicePort: 80
  tls:
  - secretName: webapp-tls
    hosts:
    - crafty-shelter-224719.duckdns.org
  - secretName: assets-tls
    hosts:
    - crafty-shelter-224719-assets.duckdns.org
